CSS - fix layout spacing

--- a/src/components/Button.scss
+++ b/src/components/Button.scss
@@ -10,8 +10,13 @@ $color-primary-valid: #ff5f33;
   border-radius: 1000px;
   cursor: pointer;
   box-shadow: 0px 8px 10px 0px rgba($color-primary, 0.25);
-  margin-bottom: 30px;
+  margin-bottom: 2rem;
   transition: all 0.2s ease-in-out;
+
+  .Rates & {
+    margin-bottom: 0;
+    margin-top: 1rem;
+  }
 }
 
 .Button-primary {
