--- a/src/components/Rates.scss
+++ b/src/components/Rates.scss
@@ -3,7 +3,6 @@ $color-border: #e9e9e9;
 
 .Rates {
   border-top: 1px solid $color-border;
-  margin-bottom: 2rem;
   padding-top: 0.75rem;
 }
 
@@ -26,11 +25,9 @@ $color-border: #e9e9e9;
 .Rates-item span {
   overflow: hidden;
   display: inline-block;
-  // border: 1px solid #000;
   width: 32px;
   height: 32px;
   border-radius: 50%;
-  // background-color: #afa;
 }
 
 .Rates-item img {
@@ -45,15 +42,11 @@ $color-border: #e9e9e9;
 
 .Rates-loader {
   text-align: center;
+  padding-bottom: 2rem;
 }
 
 .Rates-loader-animation {
-
-// }
-
-// .button.is-loading::after, .loader, .select.is-loading::after, .control.is-loading::after {
-  -webkit-animation: spinAround 500ms infinite linear;
-          animation: spinAround 500ms infinite linear;
+  animation: spinAround 500ms infinite linear;
   border: 2px solid $color-primary;
   border-radius: 290486px;
   border-right-color: transparent;
